# Advent-of-Code

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Cargo.toml  README.md  go.work
.github/workflows/: test.yml
2019/: Cargo.toml
2019/Day-01/: main.rs
2019/Day-02/: main.rs
2019/Day-03/: main.rs
2020/: Cargo.toml  go.mod
2020/Day-01/: main.dart  main.go  main.php  main.pl  main.rs  main_test.go
2021/: Cargo.toml  go.mod
2021/Day-01/: main.clj  main.go  main.rs  main_test.go
2021/Day-02/: main.clj  main.go  main.rs  main_test.go
2021/Day-03/: main.go  main.rs  main_test.go
2021/Day-04/: .editorconfig  main.clj  main.rs
2021/Day-05/: main.rs
2021/Day-06/: main.rs
2022/: Cargo.toml  go.mod
2022/Day-01/: main.rs
2022/Day-02/: main.rs
2022/Day-03/: main.rs
2022/Day-04/: main.rs
2022/Day-05/: main.rs
2022/Day-06/: main.rs
2022/Day-07/: main.rs
2022/Day-08/: main.rs
2022/Day-09/: main.go  main.zig  main_test.go
2022/Day-10/gleam/: gleam.toml
2022/Day-10/gleam/src/: day10.gleam
2022/Day-10/gleam/test/: day10_test.gleam
2023/: Cargo.toml
2023/Day-01/: main.rs
2023/Day-02/: main.rs
2023/Day-03/gleam/: gleam.toml
2023/Day-03/gleam/src/: day03.gleam
2023/Day-03/gleam/test/: day03_test.gleam
2023/Day-04/gleam/: gleam.toml
2023/Day-04/gleam/src/: day04.gleam
2023/Day-04/gleam/test/: day04_test.gleam
2023/Day-05/gleam/: gleam.toml
2023/Day-05/gleam/src/: day05.gleam
2023/Day-05/gleam/test/: day05_test.gleam
2023/Day-06/gleam/: gleam.toml
scripts/: gen-summary.sh
(+2 files in other folders)
